<resources>
    <string name="app_name">Cook It Out</string>
    <string name="title_list">List of recipes</string>
    <string name="title_home">Home</string>
    <string name="title_newrecipe">Add a new recipe</string>
    <string name="title_categories">Categories</string>
    <string name="title_activity_add_recipe">Add a new recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_category">Categories</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="list_of_recipes">List of Recipes</string>
    <string name="log_out">Log out</string>
    <string name="basket">Basket</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="characters">*At least 8 characters long</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="about_text">Welcome to Cook It Out! This is your personal cook book for all your recipes.We prepared this about page as a user guide for your use. Home: This button will send you to your Recipe List from where you can add your recipes with the button located on the bottom. Category: This section will let you see all the categories that you made and add recipes to each of them Basket: This is your personal shopping list, you re able to add the ingredients from your recipe there. Please note that if you add an ingredient with the same unit and name it will count put the ingredients together as one</string>
    <string name="remove_item">Remove item</string>
    <string name ="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="chicken">Chicken</string>
    <string name="turkey">Turkey</string>
    <string name="fish">Fish</string>
    <string name="seafood">Seafood</string>
    <string name="orientalFood">Oriental Food</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="soup">Soup</string>
    <string name="gluten">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="salad">Salad</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="new_category">Add a new category</string>
    <string name="remove_category">Remove category</string>
    <string name="recipe_to_category">Add recipe to category</string>
    <string name="remove_recipe_from_category">Remove recipe from category</string>
    <string name="about_application">About</string>
    <string name="credits">Credits</string>
    <string name="credits_text">This application has been made by three students at VIA University College in Denmark as a semester project. Even if a use is non-commercial for purposes of the application here are some resources we used:</string>
    <string name="ikonka">ikonka</string>
    <string name="categoryName">categoryName</string>
</resources>
